# wasabi

./: .gitignore  2  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  LICENSE  Makefile  README.md  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: main.yml
.vim/: coc-settings.json
app/.cargo/: config.toml
app/.vim/: coc-settings.json
app/bug0/: Cargo.toml
app/dig/: Cargo.toml
app/hello/: Cargo.toml  Makefile  x86_64-unknown-elf.json
app/hello0/: Cargo.toml  Makefile
app/hello1/: Cargo.toml  Makefile  x86_64-wasabi-elf.json
app/httpget/: Cargo.toml
app/loop/: Cargo.toml  Makefile  x86_64-wasabi-elf.json
app/nc/: Cargo.toml
builder/: Dockerfile  Makefile  README.md
dbgutil/: Cargo.toml  sample_input.txt
default/: init.txt
e2etest/: Cargo.toml  README.md
e2etest/src/: builder.rs  devenv.rs  lib.rs  main.rs  qemu.rs
external_app_template/: Cargo.toml  Makefile  rust-toolchain.toml
font/: Cargo.toml  font.txt
graphics/: Cargo.toml
loader/: Cargo.toml
noli/: Cargo.toml  README.md  app_common.mk  x86_64-wasabi-elf.json
os/: Cargo.toml
os/src/: cmd.rs  (+49 more)
practice/: Makefile  minimal_linux_elf_1.rs  minimal_linux_elf_nostd.rs
sabi/: Cargo.toml
scripts/: check_all_commits.sh  dep.dot  depcheck.rs  install.sh  launch_qemu.sh  run_with_app.sh  rustcheck.sh  setup_dev_crostini.sh  setup_dev_environment.sh  setup_dev_macos.sh  test_runner.sh
src/: acpi.rs  allocator.rs  bits.rs  cui.rs  executor.rs  graphics.rs  gui.rs  hpet.rs  init.rs  input.rs  keyboard.rs  lib.rs  main.rs  mmio.rs  mutex.rs  pci.rs  pin.rs  print.rs  qemu.rs  range.rs  result.rs  serial.rs  slice.rs  tablet.rs  test_runner.rs  uefi.rs  usb.rs  volatile.rs  x86.rs  xhci.rs
(+114 files in other folders)
