[workspace]
resolver = "2"
members = [
    "app/dig",
    "app/hello0",
    "app/hello1",
    "app/httpget",
    "app/loop",
    "app/paint",
    "app/rev",
    "app/uname",
    "app/window0",
    "app/window1",
    "dbgutil",
    "e2etest",
    "font",
    "noli",
    "os", "sabi",
]
default-members = [
    "dbgutil",
    "e2etest",
    "font",
    "noli",
]
