[package]
name = "e2etest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
async-process = "2.0.0"
futures = "0.3.29"
retry = "2.0.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strip-ansi-escapes = "0.2.0"
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["net", "rt", "macros", "rt-multi-thread", "io-util"] }
